# iri_table_clearing_planning

./: README.md  gripper_nc_config.xml  tableware_gripper.launch
iri_iri_table_clearing_predicates/: CMakeLists.txt  package.xml
iri_iri_table_clearing_predicates/cfg/: IriTableClearingPredicates.cfg
iri_iri_table_clearing_predicates/include/: iri_table_clearing_predicates_alg.h  iri_table_clearing_predicates_alg_node.h
iri_iri_table_clearing_predicates/src/: iri_table_clearing_predicates_alg.cpp  iri_table_clearing_predicates_alg_node.cpp
iri_table_clearing_common_msgs/: CMakeLists.txt  package.xml
iri_table_clearing_common_msgs/action/: FollowJointTrajectory.action  GraspObject.action  PushObject.action
iri_table_clearing_config/: CMakeLists.txt  package.xml
iri_table_clearing_config/config/: rviz.rviz  table_clearing.perspective
iri_table_clearing_config/launch/: rqt_gui.launch  rviz.launch
iri_table_clearing_decision_maker/: CMakeLists.txt  package.xml
iri_table_clearing_decision_maker/cfg/: TableClearingDecisionMaker.cfg
iri_table_clearing_decision_maker/config/: rviz.rviz  table_clearing.perspective
iri_table_clearing_decision_maker/experiments_data/matlab/: data_parser.m  data_parser.m~
iri_table_clearing_decision_maker/experiments_data/matlab/util/: createBarPlots.m  createBarPlots_v2.m  getNamespace.m  getStatistics.m  getStatistics.m~  init_exp_process.m  labelsIndices.m  readData.m  readExpData.m  readOriginalPlan.m
iri_table_clearing_decision_maker/include/: decision_maker_visualization.h  experiment_handler.h  table_clearing_decision_maker_alg.h  table_clearing_decision_maker_alg_node.h
iri_table_clearing_decision_maker/launch/: .iri_table_clearing_decision_maker.launch.swp  decision_maker.launch  iri_table_clearing_decision_maker.launch  kinect.launch  rqt_gui.launch  rviz.launch  tos_supervoxels_server.launch
iri_table_clearing_decision_maker/src/: experiment_handler.cpp  table_clearing_decision_maker_alg.cpp  table_clearing_decision_maker_alg_node.cpp
iri_table_clearing_description/: CMakeLists.txt  package.xml
iri_table_clearing_description/xacro/: estirabot.urdf.xacro  estirabot_gripper.urdf.xacro  grippertcp.urdf.xacro
iri_table_clearing_execute/: CMakeLists.txt  package.xml
iri_table_clearing_execute/cfg/: TableClearingExecute.cfg
iri_table_clearing_execute/include/: table_clearing_execute_alg.h  table_clearing_execute_alg_node.h
iri_table_clearing_execute/launch/: iri_table_clearing_execute.launch  iri_wam.launch  moveit.launch
iri_table_clearing_execute/src/: table_clearing_execute_alg.cpp  table_clearing_execute_alg_node.cpp
iri_table_clearing_execute/srv/: ExecuteAction.srv  ExecuteGrasping.srv  ExecutePushing.srv
iri_table_clearing_gazebo/: CMakeLists.txt  package.xml
iri_table_clearing_gazebo/launch/: delete_model_server.launch  estirabot.launch  estirabot_gripper.launch  gazebo.launch  ik.launch  ik_gripper.launch  kinect.launch  table_clearing_planning.launch  world_only.launch
iri_table_clearing_gazebo/scripts/: delete_model_service.py  fake_services.py
iri_table_clearing_gazebo/srv/: DeleteObject.srv
iri_table_clearing_gazebo/worlds/: .simple5_test.world.swp  calibration_stereo.world  comparison1.world  comparison2.world  empty_textured.world  in_lab.world  simple3_1.world  simple3_2.world  simple3_3.world  simple4_1.world  simple4_2.world  simple4_3.world  simple4_test.world  simple5_1.world  simple5_test.world  simple6_test.world  test1.sdf  test1.world  test2.world  test2_textured.world  test3  test3.world  test_textured1.world  test_textured2.world  test_textured3.world  test_textured4.world  test_textured5.world  test_textured6.world
iri_table_clearing_grasp_execution/: CMakeLists.txt  package.xml
iri_table_clearing_grasp_execution/cfg/: TableClearingGraspExecution.cfg
iri_table_clearing_grasp_execution/include/: table_clearing_grasp_execution_alg.h  table_clearing_grasp_execution_alg_node.h
iri_table_clearing_grasp_execution/src/: table_clearing_grasp_execution_alg.cpp  table_clearing_grasp_execution_alg_node.cpp
iri_table_clearing_planning/: CMakeLists.txt  package.xml
iri_table_clearing_planning_moveit_config/: CMakeLists.txt  package.xml
iri_table_clearing_planning_moveit_config/config/: controllers.yaml  estirabot.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  sensors_rgbd.yaml
iri_table_clearing_planning_moveit_config/launch/: default_warehouse_db.launch  demo.launch  estirabot_moveit_controller_manager.launch.xml  estirabot_moveit_sensor_manager.launch.xml  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  octomap_mapping.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
iri_table_clearing_planning_moveit_config/src/: moveit_test.cpp
iri_table_clearing_predicates/: CMakeLists.txt  package.xml
iri_table_clearing_predicates/cfg/: TableClearingPredicates.cfg
iri_table_clearing_predicates/include/: table_clearing_predicates_alg.h  table_clearing_predicates_alg_node.h
iri_table_clearing_predicates/launch/: iri_table_clearing_predicates.launch
iri_table_clearing_predicates/msg/: AABB.msg  BlockPredicate.msg  GraspingPoses.msg  OBB.msg  OnTopPredicate.msg  PrincipalDirections.msg  PushingDirections.msg  PushingGraspingPose.msg  PushingLength.msg  PushingPoses.msg
iri_table_clearing_predicates/src/: table_clearing_predicates_alg.cpp  table_clearing_predicates_alg_node.cpp
iri_table_clearing_predicates/srv/: Predicates.srv
iri_table_clearing_push_execution/: CMakeLists.txt  package.xml
iri_table_clearing_push_execution/cfg/: TableClearingPushExecution.cfg
iri_table_clearing_push_execution/include/: table_clearing_push_execution_alg.h  table_clearing_push_execution_alg_node.h
iri_test/: CMakeLists.txt  package.xml
iri_test_trajectory/: CMakeLists.txt  package.xml
(+14 files in other folders)
